src/objects/Offense_Rule__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Offense__c</fullName>
        <globalPicklist>Offense</globalPicklist>
        <label>Offense</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rules__c</fullName>
        <globalPicklist>Rules</globalPicklist>
        <label>Rules</label>
        <type>Picklist</type>
    </fields>
    <label>Offense Rule</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Offense Rules Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Offense Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>